refactor: HttpRequestUtil 내 파싱 메서드 전부 객체 내부로 분리