@@ -1,33 +1,34 @@
 package org.apache.coyote.http11.model;
 
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
 public class QueryParameter {
 
-    private final Map<String, String> queryParameter;
+    private final Map<String, String> queryParameters;
 
     public QueryParameter() {
-        this.queryParameter = new HashMap<>();
+        this.queryParameters = new HashMap<>();
     }
 
-    public QueryParameter(String queryString) {
-        this.queryParameter = new HashMap<>();
-        doParse(queryString);
+    public QueryParameter(final String queryString) {
+        this.queryParameters = parse(queryString);
     }
 
-    public String getParameter(String key) {
-        return queryParameter.get(key);
+    private QueryParameter(final Map<String, String> queryParameters) {
+        this.queryParameters = queryParameters;
     }
 
-    public void addParameterFromBody(String body) {
-        doParse(body);
+    public static QueryParameter fromBody(final String body) {
+        return new QueryParameter(parse(body));
     }
 
-    private void doParse(String data) {
+    private static Map<String, String> parse(String data) {
+        final Map<String, String> parameters = new HashMap<>();
         if (data == null || data.isBlank()) {
-            return;
+            return parameters;
         }
         String[] pairs = data.split("&");
         for (String pair : pairs) {
@@ -35,16 +36,24 @@ public class QueryParameter {
             if (keyValue[0].isBlank()) {
                 continue;
             }
-            try {
-                String key = URLDecoder.decode(keyValue[0], "UTF-8");
-                String value = "";
-                if(keyValue.length > 1) {
-                    value = URLDecoder.decode(keyValue[1], "UTF-8");
-                }
-                queryParameter.put(key, value);
-            } catch (java.io.UnsupportedEncodingException e) {
-                throw new IllegalArgumentException("Failed to decode parameter: " + pair, e);
+            String key = URLDecoder.decode(keyValue[0], StandardCharsets.UTF_8);
+            String value = "";
+            if (keyValue.length > 1) {
+                value = URLDecoder.decode(keyValue[1], StandardCharsets.UTF_8);
             }
+            parameters.put(key, value);
         }
+        return parameters;
+    }
+
+    public void merge(final QueryParameter other) {
+        if (other == null) {
+            return;
+        }
+        queryParameters.putAll(other.queryParameters);
+    }
+
+    public String getValue(String key) {
+        return queryParameters.get(key);
     }
 }
